working on BMSPROB-15 (fixed layout bug in observer view)

--- a/app/css/editor/bms.editor.observer.css
+++ b/app/css/editor/bms.editor.observer.css
@@ -1,4 +1,5 @@
 .observer-box {
+    display: block;
     margin-bottom: 1px;
     width: 280px;
     padding: 6px;
